--- a/BTM_Qt/calendar.ui
+++ b/BTM_Qt/calendar.ui
@@ -14,13 +14,6 @@
    <string>Basketball Team Manager</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Back</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="1">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
@@ -38,15 +31,15 @@
      </widget>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="2">
-    <widget class="QCalendarWidget" name="calendarWidget">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>1</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Back</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
