--- a/BTM_Qt/teaminfo.ui
+++ b/BTM_Qt/teaminfo.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Basketball Team Manager</string>
+   <string>Dialog</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -31,14 +31,14 @@
      </widget>
     </item>
     <item>
-     <widget class="QLabel" name="coachn">
+     <widget class="QLabel" name="division">
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLabel" name="division">
+     <widget class="QLabel" name="coachn">
       <property name="text">
        <string/>
       </property>
