--- a/BTM_Qt/preparation.ui
+++ b/BTM_Qt/preparation.ui
@@ -6,448 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>777</width>
-    <height>531</height>
+    <width>667</width>
+    <height>471</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Basketball Team Manager</string>
+   <string>Dialog</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="2" column="6">
-       <widget class="QLCDNumber" name="lcdNumber"/>
-      </item>
-      <item row="2" column="3" colspan="3">
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="9">
-       <widget class="QLCDNumber" name="lcdNumber_3"/>
-      </item>
-      <item row="9" column="1" colspan="2">
-       <widget class="QProgressBar" name="progressBar_4">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QLabel" name="labelp">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0" colspan="3">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0" colspan="2">
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="8" colspan="2">
-       <widget class="QProgressBar" name="progressBar_3">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="2">
-       <widget class="QLCDNumber" name="lcdNumber_2"/>
-      </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="label_4p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="8" colspan="2">
-       <widget class="QProgressBar" name="progressBar_5">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0" colspan="3">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="label_2p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="9">
-       <widget class="QLCDNumber" name="lcdNumber_5"/>
-      </item>
-      <item row="3" column="4" colspan="3">
-       <widget class="QProgressBar" name="progressBar">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0" colspan="2">
-       <widget class="QPushButton" name="pushButton_4">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="2">
-       <widget class="QLCDNumber" name="lcdNumber_4"/>
-      </item>
-      <item row="1" column="3" colspan="4">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1" colspan="2">
-       <widget class="QProgressBar" name="progressBar_2">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="7">
-       <widget class="QLabel" name="label_3p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="7" colspan="2">
-       <widget class="QPushButton" name="pushButton_3">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="7" colspan="3">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="7">
-       <widget class="QLabel" name="label_5p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="7" colspan="2">
-       <widget class="QPushButton" name="pushButton_5">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="7" colspan="3">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="3">
-       <widget class="QLabel" name="label_14">
-        <property name="text">
-         <string>Starting</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="widget_2" native="true">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="12" column="0">
-       <widget class="QLabel" name="label_8p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="4">
-       <widget class="QLCDNumber" name="lcdNumber_11"/>
-      </item>
-      <item row="12" column="1">
-       <widget class="QProgressBar" name="progressBar_8">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="1">
-       <widget class="QLCDNumber" name="lcdNumber_8"/>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QLabel" name="label_13">
-        <property name="text">
-         <string>Substitutes</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="1">
-       <widget class="QLCDNumber" name="lcdNumber_10"/>
-      </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label_6p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="3">
-       <widget class="QLabel" name="label_7p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="23" column="1">
-       <widget class="QProgressBar" name="progressBar_12">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="4">
-       <widget class="QProgressBar" name="progressBar_9">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QPushButton" name="pushButton_6">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="0">
-       <widget class="QPushButton" name="pushButton_8">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="3">
-       <widget class="QPushButton" name="pushButton_7">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="32" column="3" colspan="2">
-       <widget class="QPushButton" name="pushButton_14">
-        <property name="text">
-         <string>Next Match</string>
-        </property>
-       </widget>
-      </item>
-      <item row="19" column="0">
-       <widget class="QLabel" name="label_12">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLCDNumber" name="lcdNumber_6"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="27" column="0" colspan="5">
-       <widget class="QPushButton" name="pushButton_13">
-        <property name="text">
-         <string>Change</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="4">
-       <widget class="QLCDNumber" name="lcdNumber_9"/>
-      </item>
-      <item row="7" column="4">
-       <widget class="QProgressBar" name="progressBar_7">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="QProgressBar" name="progressBar_6">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="3">
-       <widget class="QLabel" name="label_9p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="21" column="1">
-       <widget class="QLCDNumber" name="lcdNumber_12"/>
-      </item>
-      <item row="4" column="4">
-       <widget class="QLCDNumber" name="lcdNumber_7"/>
-      </item>
-      <item row="13" column="0">
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="32" column="0" colspan="2">
-       <widget class="QPushButton" name="pushButton_15">
-        <property name="text">
-         <string>Back</string>
-        </property>
-       </widget>
-      </item>
-      <item row="13" column="3">
-       <widget class="QLabel" name="label_11">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="3">
-       <widget class="QLabel" name="label_9">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="26" column="3">
-       <widget class="QLabel" name="label_p2">
-        <property name="text">
-         <string>Player 2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="3">
-       <widget class="QPushButton" name="pushButton_9">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="0">
-       <widget class="QPushButton" name="pushButton_10">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="18" column="4">
-       <widget class="QProgressBar" name="progressBar_11">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="21" column="0">
-       <widget class="QPushButton" name="pushButton_12">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="16" column="3">
-       <widget class="QPushButton" name="pushButton_11">
-        <property name="text">
-         <string>Choose</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="26" column="0">
-       <widget class="QLabel" name="label_p1">
-        <property name="text">
-         <string>Player 1</string>
-        </property>
-       </widget>
-      </item>
-      <item row="18" column="0">
-       <widget class="QLabel" name="label_10p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="18" column="1">
-       <widget class="QProgressBar" name="progressBar_10">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="18" column="3">
-       <widget class="QLabel" name="label_11p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-      <item row="23" column="0">
-       <widget class="QLabel" name="label_12p">
-        <property name="text">
-         <string>TextLabel</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-  </layout>
  </widget>
  <resources/>
  <connections/>
