--- a/BTM_Qt/mainwindow.ui
+++ b/BTM_Qt/mainwindow.ui
@@ -32,7 +32,7 @@
     <item row="12" column="4" colspan="2">
      <widget class="QPushButton" name="pushButton_2">
       <property name="text">
-       <string>Preparation</string>
+       <string>Market</string>
       </property>
      </widget>
     </item>
