You can buy players
- Coded a buy function in class Team
- Displayed the market players in market buy section
- Made the conncections between the buy and sell buttons.
- You can buy players and sell players now
-  The program also asks you if you are sure to buy or to send.

--- a/BTM_Qt/market.ui
+++ b/BTM_Qt/market.ui
@@ -454,7 +454,7 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="widget">
     <attribute name="title">
      <string>Buy Players</string>
     </attribute>
