--- a/BTM_Qt/nextgame.ui
+++ b/BTM_Qt/nextgame.ui
@@ -14,23 +14,15 @@
    <string>Dialog</string>
   </property>
   <widget class="QLabel" name="quater">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>140</y>
-     <width>171</width>
-     <height>21</height>
-    </rect>
-   </property>
    <property name="text">
-    <string>Quarter</string>
+    <string>Quater</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>570</y>
+     <y>520</y>
      <width>495</width>
      <height>30</height>
     </rect>
@@ -93,7 +85,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -119,42 +111,26 @@
     </item>
     <item>
      <widget class="QLabel" name="time">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
       <property name="text">
-       <string>00:00</string>
+       <string>TextLabel</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QLabel" name="home_name">
+       <widget class="QLabel" name="away_name_2">
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLCDNumber" name="home_score"/>
+       <widget class="QLCDNumber" name="away_score_2"/>
       </item>
      </layout>
     </item>
    </layout>
-  </widget>
-  <widget class="QLabel" name="end_msg">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>530</y>
-     <width>301</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
   </widget>
  </widget>
  <resources/>
