--- a/BTM_Qt/res_file.qrc
+++ b/BTM_Qt/res_file.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/images">
         <file>images/IMG_5930.jpg</file>
+        <file>images/image_2.jpg</file>
     </qresource>
 </RCC>
