--- a/BTM_Qt/training.ui
+++ b/BTM_Qt/training.ui
@@ -49,16 +49,6 @@
     <string>Pos2</string>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView_9">
-   <property name="geometry">
-    <rect>
-     <x>321</x>
-     <y>196</y>
-     <width>139</width>
-     <height>74</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="labelp">
    <property name="geometry">
     <rect>
@@ -83,16 +73,6 @@
    </property>
    <property name="text">
     <string>Pos4</string>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_5">
-   <property name="geometry">
-    <rect>
-     <x>12</x>
-     <y>196</y>
-     <width>141</width>
-     <height>74</height>
-    </rect>
    </property>
   </widget>
   <widget class="QProgressBar" name="progressBar_7">
@@ -186,16 +166,6 @@
     <string>Player5</string>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView_7">
-   <property name="geometry">
-    <rect>
-     <x>166</x>
-     <y>196</y>
-     <width>141</width>
-     <height>74</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLCDNumber" name="lcdNumber_3">
    <property name="geometry">
     <rect>
@@ -252,16 +222,6 @@
      <y>344</y>
      <width>64</width>
      <height>23</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_4">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>12</y>
-     <width>134</width>
-     <height>81</height>
     </rect>
    </property>
   </widget>
@@ -330,16 +290,6 @@
     <string>Player2</string>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView_2">
-   <property name="geometry">
-    <rect>
-     <x>166</x>
-     <y>12</y>
-     <width>141</width>
-     <height>81</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QProgressBar" name="progressBar_3">
    <property name="geometry">
     <rect>
@@ -364,26 +314,6 @@
    </property>
    <property name="value">
     <number>24</number>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView">
-   <property name="geometry">
-    <rect>
-     <x>12</x>
-     <y>12</y>
-     <width>141</width>
-     <height>81</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_3">
-   <property name="geometry">
-    <rect>
-     <x>321</x>
-     <y>12</y>
-     <width>139</width>
-     <height>81</height>
-    </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
@@ -445,16 +375,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView_12">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>377</y>
-     <width>134</width>
-     <height>74</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_10p">
    <property name="geometry">
     <rect>
@@ -507,16 +427,6 @@
     <number>24</number>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView_8">
-   <property name="geometry">
-    <rect>
-     <x>166</x>
-     <y>377</y>
-     <width>141</width>
-     <height>74</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
@@ -550,16 +460,6 @@
      <y>344</y>
      <width>64</width>
      <height>23</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_11">
-   <property name="geometry">
-    <rect>
-     <x>321</x>
-     <y>377</y>
-     <width>139</width>
-     <height>74</height>
     </rect>
    </property>
   </widget>
@@ -626,16 +526,6 @@
    </property>
    <property name="text">
     <string>Pos6</string>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_6">
-   <property name="geometry">
-    <rect>
-     <x>12</x>
-     <y>377</y>
-     <width>141</width>
-     <height>74</height>
-    </rect>
    </property>
   </widget>
   <widget class="QProgressBar" name="progressBar_12">
@@ -728,16 +618,6 @@
    </property>
    <property name="value">
     <number>24</number>
-   </property>
-  </widget>
-  <widget class="QGraphicsView" name="graphicsView_10">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>196</y>
-     <width>134</width>
-     <height>74</height>
-    </rect>
    </property>
   </widget>
   <widget class="QLabel" name="cost4">
@@ -976,13 +856,221 @@ Goal: Att-Def Analysis / Motivation </string>
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>570</y>
+     <y>580</y>
      <width>451</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Note: You can train your team just by clicking the desired training method. </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_1">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_6">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>0</y>
+     <width>16</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_7">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>0</y>
+     <width>16</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_8">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>0</y>
+     <width>16</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_9">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>560</y>
+     <width>611</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_2">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>10</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_3">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>10</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_4">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>10</y>
+     <width>131</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_5">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>190</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_6">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>190</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_7">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>190</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_8">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>190</y>
+     <width>131</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_9">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>380</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_10">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>380</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_11">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>380</y>
+     <width>141</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="image_12">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>380</y>
+     <width>131</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
